# rpm-lockfile-prototype

./: .flake8  .gitignore  .packit.yaml  CHANGELOG.md  Containerfile  Dockerfile  README.md  codecov.yml  pyproject.toml  python-rpm-lockfile-prototype.spec
.agents/skills/release/: SKILL.md
.github/workflows/: docker-publish.yml  release.yml  workflow.yml
examples/fedora-vim/: README.md  rpms.in.yaml
examples/image-labels/: Containerfile  README.md  rpms.in.yaml
examples/local/: README.md  rpms.in.yaml
examples/multi-stage/: Containerfile  README.md  develop.rpms.in.yaml  runtime.rpms.in.yaml
lockfile_resolver/: __init__.py  schema.py
lockfile_resolver/content_origin/: __init__.py  composes.py  repofiles.py  repos.py
rpm_lockfile/: __init__.py  assumed_provides.py  caching_wrapper.py  containerfile_packages.py  containers.py  log.py  schema.py  shell_commands.py  utils.py
rpm_lockfile/content_origin/: __init__.py  composes.py  repofiles.py  repos.py
tests/: test_caching_wrapper.py  test_containerfile_packages.py  test_containers.py  test_init.py  test_init_extended.py  test_match_context_versions.py  test_schema_extended.py  test_shell_commands.py  test_utils.py
tests/content_origin/: test_composes.py  test_repofiles.py  test_repos.py
tests/integration/: README.md  conftest.py  generate-expected  repogen.py  skopeo-cache  test_integration.py
tests/integration/data/failure/match-context-versions-bare/: expected.stderr  rpms.in.yaml
tests/integration/data/failure/missing-package/: expected.stderr  rpms.in.yaml
tests/integration/data/failure/reinstall-not-in-repo/: expected.stderr
tests/integration/data/failure/reinstall-version-mismatch/: expected.stderr
tests/integration/data/success/already-installed-in-image/: expected.lock.yaml  rpms.in.yaml
tests/integration/data/success/assume-provides/: expected.lock.yaml  rpms.in.yaml
tests/integration/data/success/basearch-substitution/: expected.lock.yaml  rpms.in.yaml
tests/integration/data/success/container-yaml/: container.yaml  expected.lock.yaml  rpms.in.yaml
tests/integration/data/success/containerfile/: Containerfile  expected.lock.yaml  rpms.in.yaml
tests/integration/data/success/containerfile-arch-packages/: rpms.in.yaml
tests/integration/data/success/containerfile-arg-expansion/: Containerfile
tests/integration/data/success/containerfile-image-pattern/: Containerfile  rpms.in.yaml
tests/integration/data/success/containerfile-packages/: Dockerfile  expected.lock.yaml  rpms.in.yaml
tests/integration/data/success/containerfile-script-packages/: expected.stdout
tests/integration/data/success/containerfile-stage-name/: Containerfile  rpms.in.yaml
tests/integration/data/success/containerfile-stage-num/: Containerfile  rpms.in.yaml
tests/integration/data/success/containerfile-stage-select/: rpms.in.yaml
tests/integration/data/success/containerfile-stage-select-num/: Dockerfile  rpms.in.yaml
tests/integration/data/success/containerfile-stage-select-pattern/: rpms.in.yaml
tests/integration/data/success/containerfile-string/: rpms.in.yaml
tests/integration/data/success/dep-satisfied-by-image/: expected.lock.yaml  rpms.in.yaml
tests/integration/data/success/filelists-needed/: expected.lock.yaml  rpms.in.yaml
tests/integration/data/success/image-ubi10/: rpms.in.yaml
(+180 files in other folders)
