[project]
name = "rpm-lockfile-prototype"
version = "0.13.0"
description = ""
authors = [
    {name = "Lubomír Sedlář", email = "lsedlar@redhat.com"},
]
readme = "README.md"
dependencies = [
    "jsonschema",
    "productmd",
    "pyyaml",
    "requests",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[tool.setuptools]
packages = ['rpm_lockfile', 'rpm_lockfile.content_origin']

[project.scripts]
rpm-lockfile-prototype = "rpm_lockfile:main"
caching-rpm-lockfile-prototype = "rpm_lockfile.caching_wrapper:main"


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.entry-points."rpm_lockfile.content_origins"]
repos = "rpm_lockfile.content_origin.repos:RepoOrigin"
repofiles = "rpm_lockfile.content_origin.repofiles:RepofileOrigin"
composes = "rpm_lockfile.content_origin.composes:ComposeOrigin"
