[project]
name = "rpm-lockfile-prototype"
version = "0.27.0"
description = ""
authors = [
    {name = "Lubomír Sedlář", email = "lsedlar@redhat.com"},
]
readme = "README.md"
dependencies = [
    "dockerfile-parse",
    "jsonschema",
    "productmd",
    "pyyaml",
    "requests",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[tool.setuptools]
packages = ['rpm_lockfile', 'rpm_lockfile.content_origin', 'rpm_lockfile.vendor', 'rpm_lockfile.vendor.bashlex']

[project.scripts]
rpm-lockfile-prototype = "rpm_lockfile:main"
caching-rpm-lockfile-prototype = "rpm_lockfile.caching_wrapper:main"


[tool.ruff]
exclude = ["rpm_lockfile/vendor"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
parallel = true
source = ["rpm_lockfile"]
relative_files = true

[tool.coverage.paths]
source = [
    "rpm_lockfile/",
    "/*/site-packages/rpm_lockfile/",
]

[tool.coverage.report]
show_missing = true

[project.entry-points."rpm_lockfile.content_origins"]
repos = "rpm_lockfile.content_origin.repos:RepoOrigin"
repofiles = "rpm_lockfile.content_origin.repofiles:RepofileOrigin"
composes = "rpm_lockfile.content_origin.composes:ComposeOrigin"
